--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				
 			</div>
 		</div>
-		<div class="blue">
+		<div class="red">
 			<div class="purple">	
 			</div>
 			<div class="green">	
@@ -33,9 +33,30 @@
 			</div>
 			<div class="green">
 			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
 		</div>
-		<div class="blue">
-<div class="blue">
+		<div class="red">
 			<div class="green">	
 			</div>
 			<div class="purple">	
@@ -48,6 +69,31 @@
 			</div>
 			<div class="purple">
 			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
 		</div>
+		<div class="black">	
+			<div class="a">
+			</div>
 		</div>
 	</body>
