--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				
 			</div>
 		</div>
-		<div class="red">
+		<div class="blue">
 			<div class="purple">	
 			</div>
 			<div class="green">	
@@ -33,30 +33,9 @@
 			</div>
 			<div class="green">
 			</div>
-			<div class="purple">	
-			</div>
-			<div class="green">	
-			</div>
-			<div class="purple">	
-			</div>
-			<div class="green">	
-			</div>
-			<div class="purple">	
-			</div>
-			<div class="green">
-			</div>
-			<div class="purple">	
-			</div>
-			<div class="green">	
-			</div>
-			<div class="purple">	
-			</div>
-			<div class="green">	
-			</div>
-			<div class="purple">	
-			</div>
 		</div>
-		<div class="red">
+		<div class="blue">
+<div class="blue">
 			<div class="green">	
 			</div>
 			<div class="purple">	
@@ -69,31 +48,6 @@
 			</div>
 			<div class="purple">
 			</div>
-			<div class="green">	
-			</div>
-			<div class="purple">	
-			</div>
-			<div class="green">	
-			</div>
-			<div class="purple">	
-			</div>
-			<div class="green">	
-			</div>
-			<div class="purple">
-			</div>
-			<div class="green">	
-			</div>
-			<div class="purple">	
-			</div>
-			<div class="green">	
-			</div>
-			<div class="purple">	
-			</div>
-			<div class="green">	
-			</div>
 		</div>
-		<div class="black">	
-			<div class="a">
-			</div>
 		</div>
 	</body>
