--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +19,7 @@
 				
 			</div>
 		</div>
-		<div class="blue">
+		<div class="red">
 			<div class="purple">	
 			</div>
 			<div class="green">	
@@ -33,9 +32,30 @@
 			</div>
 			<div class="green">
 			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
 		</div>
-		<div class="blue">
-<div class="blue">
+		<div class="red">
 			<div class="green">	
 			</div>
 			<div class="purple">	
@@ -48,6 +68,31 @@
 			</div>
 			<div class="purple">
 			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
+			<div class="purple">	
+			</div>
+			<div class="green">	
+			</div>
 		</div>
+		<div class="black">	
+			<div class="a">
+			</div>
 		</div>
 	</body>
